feat: 필터 적용 planCount 기능 및 wrapper dto 추가