@@ -2,6 +2,8 @@ package com.ureca.yoajungserver.plan.service;
 
 import com.ureca.yoajungserver.plan.dto.request.PlanFilterRequest;
 import com.ureca.yoajungserver.plan.dto.response.PlanFilterResponse;
+import com.ureca.yoajungserver.plan.dto.response.PlanFilterResultResponse;
+import com.ureca.yoajungserver.plan.entity.Plan;
 import com.ureca.yoajungserver.plan.repository.PlanFilterRepository;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
@@ -18,9 +20,15 @@ public class PlanFilterServiceImpl implements PlanFilterService {
 
     @Override
     @Transactional
-    public List<PlanFilterResponse> searchPlans(PlanFilterRequest filterRequest) {
-        return planFilterRepository.plans(filterRequest)
-                .stream().map(PlanFilterResponse::from)
-                .collect(Collectors.toList());
+    public PlanFilterResultResponse searchPlans(PlanFilterRequest request) {
+        // Fetch paginated plans and total count using consistent filter logic
+        List<Plan> plans = planFilterRepository.plans(request);
+        long totalCount = planFilterRepository.countPlans(request);
+        return PlanFilterResultResponse.builder()
+                .plans(plans.stream().map(PlanFilterResponse::from).toList())
+                .totalCount(totalCount)
+                .build();
     }
+
+
 }
